# LatexGenerator

./: .gitignore  CMakeLists.txt  README.md  example.cpp  example.txt  main.cpp
LatexGenerator/: Latex.cpp  Latex.h
interfaces/: CLI.cpp  GUI.java
